Bug 486790 - Dolphin refuses to open folders in WebDAV locations and redirects to a browser
Summary: Dolphin refuses to open folders in WebDAV locations and redirects to a browser
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-08 16:55 UTC by Andrey Voeiko
Modified: 2025-10-27 11:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dolphin redirects to browser (1011.92 KB, video/x-matroska)
2024-05-08 16:55 UTC, Andrey Voeiko
Details
Dolphin works with a folder directly (1.81 MB, video/x-matroska)
2024-05-08 16:58 UTC, Andrey Voeiko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Voeiko 2024-05-08 16:55:55 UTC
Created attachment 169323 [details]
Dolphin redirects to browser

When using Dophin to manage WebDAV locations it manages the files fine, but redirects to browser when you try to open a folder, saying "Dolphin doesn't suppot opening webpages, so a webbrowser will be opened". Interestingly, when you open a folder in a new tab/new window/split panel, it works as expected.


STEPS TO REPRODUCE
1. Connect to a WebDAV location
2. Open a folder

OBSERVED RESULT
Dolphin redirects to a browser with an error message.

EXPECTED RESULT
Dolphin should open a folder.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 40 KDE Flavor
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Comment 1 Andrey Voeiko 2024-05-08 16:58:10 UTC
Created attachment 169324 [details]
Dolphin works with a folder directly
Comment 2 Andrey Voeiko 2024-05-08 16:59:13 UTC
You can see examples in attachments (locale is Russian)
Comment 3 robin 2025-02-03 09:29:10 UTC
I can reproduce this in Plasma 6.2.5 with frameworks 6.10.0 using Nextcloud WebDAV. Opening directories by double clicking does not work (opens a browser) but right click -> open in new tab/window does work. This bug makes WebDAV shares quite unusable, I am surprised this bug is not more popular. I wonder if it is an issue specific to some configuration?
Comment 4 robin 2025-02-03 09:50:54 UTC
This bug does not occur with a local WebDAV server I am developing. Maybe because it is http:// instead of https://
Comment 5 Alberto Mattea 2025-06-14 11:20:46 UTC
I can confirm with an http webdav server. It seems that webdav:/ is being replaced with http:/ in the dolphin location bar, so that at the next click it opens the browser.
Comment 6 Bug Janitor Service 2025-10-17 19:18:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2026
Comment 7 Alberto Mattea 2025-10-27 11:34:55 UTC
Git commit 11d21eef81aceab26129bed2135a7f2f9a15e14c by Alberto Mattea.
Committed on 27/10/2025 at 04:27.
Pushed by meven into branch 'master'.

[http] Remember that we're doing webdav while handling redirects

We were reverting to plain http(s), which confused clients like dolphin.
If the redirection target is plaintext use 'webdav' or 'dav' (respecting the current name choice), otherwise 'webdavs' or 'davs'.
Note that the encryption status of the redirection target can be different from the current one, so we cannot blindly use the old protocol.

M  +11   -1    src/kioworkers/http/http.cpp

https://invent.kde.org/frameworks/kio/-/commit/11d21eef81aceab26129bed2135a7f2f9a15e14c